# agentkavach

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentkavach/: __init__.py  alerts.py  budget.py  buffer.py  client.py  engine.py  exceptions.py  pricing.py  sender.py  stream.py
agentkavach/channels/: __init__.py  email.py  pagerduty.py  slack.py  templates.py  webhook.py
agentkavach/providers/: __init__.py  anthropic.py  google.py  mistral.py  openai.py
scripts/: release_smoke.py
tests/: conftest.py  test_alerts.py  test_budget.py  test_buffer.py  test_channels.py  test_client.py  test_client_channels.py  test_client_guardrails.py  test_client_latency_status.py  test_client_sync.py  test_engine.py  test_engine_guardrails.py  test_exceptions.py  test_fail_on_error.py  test_loop_detection.py  test_multi_provider.py  test_on_kill_reason.py  test_phase59_blockers.py  test_phase86_model_normalization.py  test_pricing.py  test_providers.py  test_sdk_no_double_write.py  test_sender.py  test_stream.py  test_streaming_cost.py  test_streaming_providers.py  test_templates.py
